--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -29,7 +29,7 @@
     <script src="static/score.js"></script>
     <script src="static/script.js"></script>
     <script defer src="static/ui.js"></script>
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link rel="stylesheet" type="text/css" href="static/pipescore.css">
 </head>
 
 <body><noscript>Please enable JavaScript in your browser to use this app.</noscript>
