Styled landing page

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="static/index.css">
 </head>
 <body>
-    <a href="/pipescore">Go to Pipescore</a>
+    <main>
+        <div id="left">
+            <h1>Pipescore</h1>
+            <p>Free, online bagpipe music notation.</p>
+        </div>
+        <div id="right">
+            <div id="top"><button><a href="/login">Sign up / Log in</a></button></div>
+            <div id="bottom"><button><a href="/pipescore">Go to Pipescore</a></button></div>
+        </div>
+    </main>
 </body>
 </html>
