Fixed spelling of PipeScore on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>PipeScore</title>
     <link rel="stylesheet" href="static/index.css">
 </head>
 <body>
     <main>
         <div id="left">
-            <h1>Pipescore</h1>
+            <h1>PipeScore</h1>
             <p>Free, online bagpipe music notation.</p>
         </div>
         <div id="right">
             <div id="top"><button><a href="/login">Sign up / Log in</a></button></div>
-            <div id="bottom"><button><a href="/pipescore">Go to Pipescore</a></button></div>
+            <div id="bottom"><button><a href="/pipescore">Go to PipeScore</a></button></div>
         </div>
     </main>
 </body>
