Improve CSS/HTML

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,8 @@
             <p>Free, online bagpipe music notation.</p>
         </div>
         <div id="right">
-            <div id="buttons">
-                <button id="login"><a href="/login">Sign up / Log in</a></button>
-                <button id="goto"><a href="/pipescore">Go to PipeScore</a></button>
-            </div>
+            <a href="/login" id="login"><button>Sign up / Log in</button></a>
+            <a href="/pipescore" id="goto"><button>Go to PipeScore</button></a>
         </div>
     </main>
 </body>
