--- a/public/login.html
+++ b/public/login.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Log in / Sign up</title>
+    <link rel="stylesheet" href="static/login.css">
 </head>
 <body>
+    <a href="/">Home</a>
     <button id="login-google" onclick="loginGoogle()">Login with Google</button>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/7.2.0/firebase-app.js"></script>
@@ -22,9 +24,10 @@
         document.addEventListener('DOMContentLoaded', _ => {
             const app = firebase.app();
         });
-        function loginGoogle() {
+        async function loginGoogle() {
             const provider = new firebase.auth.GoogleAuthProvider();
-            firebase.auth().signInWithPopup(provider);
+            await firebase.auth().signInWithPopup(provider);
+            window.location = '/pipescore';
         }
     </script>
 </body>
