--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>PipeScore</title>
-    <link rel="shortcut icon" href="static/images/favicon.ico">
+    <link rel="shortcut icon" href="res/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -18,18 +18,18 @@
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
-    <script src="static/p5.pdf.js"></script>
-    <script src="static/stave.js"></script>
-    <script src="static/demonote.js"></script>
-    <script src="static/note.js"></script>
-    <script src="static/gracenote.js"></script>
-    <script src="static/barline.js"></script>
-    <script src="static/text.js"></script>
-    <script src="static/time_sig.js"></script>
-    <script src="static/score.js"></script>
-    <script src="static/script.js"></script>
-    <script defer src="static/ui.js"></script>
-    <link rel="stylesheet" type="text/css" href="static/pipescore.css">
+    <script src="js/p5.pdf.js"></script>
+    <script src="js/stave.js"></script>
+    <script src="js/demonote.js"></script>
+    <script src="js/note.js"></script>
+    <script src="js/gracenote.js"></script>
+    <script src="js/barline.js"></script>
+    <script src="js/text.js"></script>
+    <script src="js/time_sig.js"></script>
+    <script src="js/score.js"></script>
+    <script src="js/script.js"></script>
+    <script defer src="js/ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/pipescore.css">
 </head>
 
 <body><noscript>Please enable JavaScript in your browser to use this app.</noscript>
