--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Log in / Sign up</title>
-    <link rel="stylesheet" href="static/login.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
     <a href="/">Home</a>
