Got writing to database working

--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -15,6 +15,7 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="/__/firebase/7.2.0/firebase-analytics.js"></script>
+    <script src="/__/firebase/7.2.0/firebase-firestore.js"></script>
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
@@ -27,6 +28,7 @@
     <script src="js/text.js"></script>
     <script src="js/time_sig.js"></script>
     <script src="js/score.js"></script>
+    <script src="js/db.js"></script>
     <script src="js/script.js"></script>
     <script defer src="js/ui.js"></script>
     <link rel="stylesheet" type="text/css" href="css/pipescore.css">
