--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -15,6 +15,7 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="/__/firebase/7.2.0/firebase-analytics.js"></script>
+    <script src="/__/firebase/7.2.0/firebase-auth.js"></script>
     <script src="/__/firebase/7.2.0/firebase-firestore.js"></script>
 
     <!-- Initialize Firebase -->
