--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -61,6 +61,7 @@
                 <li class="menu-title" id="gracenote-title">Gracenote</li>
                 <li class="menu-title" id="text-title">Text</li>
                 <li class="menu-title" id="layout-title">Layout</li>
+                <li id="score-name">Name: <input type="text"></li>
             </ul>
             <div class="menu viewing" id="note">
                 <section id="note-type">
