Got rewrites to pipescore kinda working

--- a/public/scores.html
+++ b/public/scores.html
@@ -15,7 +15,7 @@
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
-    <link rel="stylesheet" href="css/scores.css">
+    <link rel="stylesheet" href="/css/scores.css">
 </head>
 <body>
     <nav></nav>
