--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -20,19 +20,19 @@
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
-    <script src="js/p5.pdf.js"></script>
-    <script src="js/stave.js"></script>
-    <script src="js/demonote.js"></script>
-    <script src="js/note.js"></script>
-    <script src="js/gracenote.js"></script>
-    <script src="js/barline.js"></script>
-    <script src="js/text.js"></script>
-    <script src="js/time_sig.js"></script>
-    <script src="js/score.js"></script>
-    <script src="js/db.js"></script>
-    <script src="js/script.js"></script>
-    <script defer src="js/ui.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/pipescore.css">
+    <script src="/js/p5.pdf.js"></script>
+    <script src="/js/stave.js"></script>
+    <script src="/js/demonote.js"></script>
+    <script src="/js/note.js"></script>
+    <script src="/js/gracenote.js"></script>
+    <script src="/js/barline.js"></script>
+    <script src="/js/text.js"></script>
+    <script src="/js/time_sig.js"></script>
+    <script src="/js/score.js"></script>
+    <script src="/js/db.js"></script>
+    <script src="/js/script.js"></script>
+    <script defer src="/js/ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/pipescore.css">
 </head>
 
 <body><noscript>Please enable JavaScript in your browser to use this app.</noscript>
