--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -49,7 +49,7 @@
     <header>
         <nav>
             <ul id="menu-titles">
-                <li id="title">PipeScore
+                <li id="title"><a href="/scores">PipeScore</a>
                     <div id="pipescore-dropdown">
                         <ul>
                             <li>Download</li>
@@ -105,6 +105,7 @@
         </nav>
     </header>
     <div id="page"></div>
+    <div id="loading"><div id="inner"></div><div id="rotate"></div></div>
     <style id="programmable-styles"></style>
 </body>
 
