--- a/public/scores.html
+++ b/public/scores.html
@@ -18,7 +18,10 @@
     <link rel="stylesheet" href="/css/scores.css">
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <h4 id="user"></h4>
+        <button id="logout">Log Out</button>
+    </nav>
     <main>
         <h1>Your Scores</h1>
         <div id="data"></div>
@@ -36,12 +39,16 @@
             });
             element.innerHTML = text;
         }
+        document.getElementById('logout').addEventListener('click', _ => firebase.auth().signOut().then(_ => {
+            window.location = '/';
+        }).catch(e => alert('An error occurred.')));
         document.addEventListener('DOMContentLoaded', _ => {
             const app = firebase.app();
             const db = firebase.firestore();
             firebase.auth().onAuthStateChanged(user => {
-                const uid = user.uid;
-                if (uid) {
+                if (user) {
+                    const uid = user.uid;
+                    document.getElementById('user').innerHTML = user.displayName;
                     const scores = db.collection('scores').doc(uid).collection('scores').get()
                     .then(data => {
                         const scores = [];
@@ -49,6 +56,8 @@
                         updateDisplay(scores,uid);
                         document.getElementById('loading').style.display = 'none';
                     });
+                } else {
+                    window.location = '/login';
                 }
             });
         });
