--- a/public/scores.html
+++ b/public/scores.html
@@ -24,6 +24,7 @@
     </nav>
     <main>
         <h1>Your Scores</h1>
+        <a href="/pipescore"><button id="new">+ New Score</button></a>
         <div id="data"></div>
     </main>
     <div id="loading"><div id="inner"></div><div id="rotate"></div></div>
