--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -62,6 +62,7 @@
                 <li class="menu-title" id="text-title">Text</li>
                 <li class="menu-title" id="layout-title">Layout</li>
                 <li id="score-name">Name: <input type="text"></li>
+                <li id="save"><button>Save</button></li>
             </ul>
             <div class="menu viewing" id="note">
                 <section id="note-type">
@@ -105,6 +106,8 @@
         </nav>
     </header>
     <div id="page"></div>
+    <div id="login-reminder"><a href="/login">Log in</a> to save score.</div>
+    <div id="saved">Saved!</div>
     <div id="loading"><div id="inner"></div><div id="rotate"></div></div>
     <style id="programmable-styles"></style>
 </body>
