Fixed small bugs and added small features

--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -85,7 +85,7 @@
                     <h1 class="title">Gracenote Mode</h1><input type="radio" name="gracenote-mode" value="normal" id="normal" checked><label for="normal">Add Gracenote</label><input type="radio" name="gracenote-mode" value="place" id="place-gracenote"><label for="place-gracenote">Add Standard Embellishment <select id="gracenote-type"><option value="d-throw">Throw on D</option><option value="b-doubling">Doubling B</option><option value="c-doubling">Doubling C</option><option value="d-doubling">Doubling D</option><option value="e-doubling">Doubling E</option><option value="f-doubling">Doubling F</option></select></label></section>
                 <section
                     id="apply-to-selected-gracenotes">
-                    <h1 class="title">Apply to Selected</h1><button id="delete-gracenotes-button">Delete</button></section>
+                    <h1 class="title">Apply to Selected</h1><button id="delete-gracenotes-button">Delete Individual</button><button id="delete-whole-gracenote">Delete Whole Gracenote</button></section>
             </div>
             <div class="menu" id="text">
                 <section id="apply-to-text">
