--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -52,8 +52,8 @@
                 <li id="title"><a href="/scores">PipeScore</a>
                     <div id="pipescore-dropdown">
                         <ul>
-                            <li>Download</li>
-                            <li>Export as PDF</li>
+                            <li id="download">Download</li>
+                            <li id="download-pdf">Export as PDF</li>
                         </ul>
                     </div>
                 </li>
