Added undo button

--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -78,6 +78,7 @@
                 <li class="menu-title" id="layout-title">Layout</li>
                 <li id="score-name">Name: <input type="text"></li>
                 <li id="save"><button>Save</button></li>
+                <li id="undo"><button>Undo</button></li>
             </ul>
             <div class="menu viewing" id="note">
                 <section id="note-type">
