--- a/public/pipescore.html
+++ b/public/pipescore.html
@@ -5,6 +5,7 @@
 <head>
     <title>PipeScore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Free, online bagpipe notation software. Write out pipe music quickly and easily! (still under development)">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="apple-touch-icon" sizes="57x57" href="/res/images/favicon/apple-icon-57x57.png">
@@ -76,9 +77,10 @@
                 <li class="menu-title" id="gracenote-title">Gracenote</li>
                 <li class="menu-title" id="text-title">Text</li>
                 <li class="menu-title" id="layout-title">Layout</li>
+                <li id="undo"><button>Undo</button></li>
+                <li id="redo"><button>Redo</button></li>
                 <li id="score-name">Name: <input type="text"></li>
                 <li id="save"><button>Save</button></li>
-                <li id="undo"><button>Undo</button></li>
             </ul>
             <div class="menu viewing" id="note">
                 <section id="note-type">
